<resources>
    <string name="app_name">AggieFeed</string>
    <string name="title">Title</string>
    <string name="display_name">Display Name</string>
    <string name="object_type">Object Type</string>
    <string name="published">Published</string>
    <string name="back_button">Back</string>
    <string name="menu_more">More</string>
    <string name="menu_back">Back</string>
    <string name="menu_search">Search</string>
    <string name="search_hint">Search Here</string>
    <string name="lorem_ipsum">Lorem Ipsum</string>
    <string name="bus_fragment">Bus Fragment</string>
    <string name="bus">Bus</string>
    <string name="feed">Feed</string>
</resources>